// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foodit - notaFooditHelper validateArticleFoodit Should return bad article ID warning message 1`] = `
Object {
  "message": "El ID de la nota es incorrecto.",
  "type": "warning",
}
`;

exports[`Foodit - notaFooditHelper validateArticleFoodit Should return no id warning message 1`] = `
Object {
  "message": "El campo Id de la Nota es obligatorio.",
  "type": "warning",
}
`;
